--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "formik": "^2.2.9",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
